force-app/main/default/objects/Claim__c/fields/Claim_Finalised__c.field-meta.xml
<CustomField>
    <fullName>Claim_Finalised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Finalised</label>
    <type>Checkbox</type>
</CustomField>