force-app/main/default/objects/Claim__c/fields/Claim_Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Claim_Service_Notes__c</fullName>
    <label>Claim Service Notes</label>
    <type>TextArea</type>
</CustomField>