force-app/main/default/objects/Claim__c/fields/Cycle_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Pricing_Type__c</fullName>
    <formula>TEXT(Cycle__r.Pricing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Pricing Type</label>
    <type>Text</type>
</CustomField>