force-app/main/default/objects/Claim__c/fields/Exempt_Claim_Finalised__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Claim_Finalised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt Claim Finalised</label>
    <type>Checkbox</type>
</CustomField>