force-app/main/default/objects/Claim__c/fields/Finalised_Date__c.field-meta.xml
<CustomField>
    <fullName>Finalised_Date__c</fullName>
    <label>Finalised Date</label>
    <type>Date</type>
</CustomField>