force-app/main/default/objects/Claim__c/fields/OI_Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>OI_Cycle_Type__c</fullName>
    <formula>TEXT( Cycle__r.OI_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OI Cycle Type</label>
    <type>Text</type>
</CustomField>