force-app/main/default/objects/Claim__c/fields/Social_Egg_Freeze_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Social_Egg_Freeze_Discount_Type__c</fullName>
    <formula>TEXT( Cycle__r.Social_Egg_Freeze_Discount_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Social Egg Freeze Discount Type</label>
    <type>Text</type>
</CustomField>