force-app/main/default/objects/Claim__c/fields/Total_Claim_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_Value__c</fullName>
    <label>Total Claim Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>