force-app/main/default/objects/Claim__c/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <columns>NAME</columns>
    <columns>Claim_Finalised__c</columns>
    <columns>Claim_Type__c</columns>
    <columns>Cycle__c</columns>
    <columns>Finalised_Date__c</columns>
    <columns>Total_Claim_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Claims</label>
</ListView>